# xrpl-coa-prototype

benchmark/: fabfile.py  settings.json
benchmark/benchmark/: commands.py  config.py  instance.py  local.py  logs.py  remote.py  settings.py  utils.py
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: adaptor.rs  ledger.rs  lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs
primary/: Cargo.toml
primary/src/: core.rs  helper.rs  ledger.rs  lib.rs  payload_receiver.rs  primary.rs  proposal.rs  proposal_waiter.rs  validation_waiter.rs  validations.rs
primary/src/tests/: common.rs  core_tests.rs
store/: Cargo.toml
store/src/: lib.rs
worker/: Cargo.toml
worker/src/: batch_maker.rs  lib.rs  processor.rs  quorum_waiter.rs  synchronizer.rs  worker.rs
worker/src/tests/: common.rs
