[package]
name = "consensus"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync"] }
log = "0.4.14"

crypto = { path = "../crypto" }
config = { path = "../config" }
primary = { path = "../primary" }

xrpl-consensus-core = { path = "../../xrpl-consensus-rs/xrpl-consensus-core" }
xrpl-consensus-validations = { path = "../../xrpl-consensus-rs/xrpl-consensus-validations" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []
